<resources>
    <string name="app_name">Todo App</string>
    <string name="todo_list_app">Todo List App</string>
    <string name="name_todo" />
    <string name="add_a_card" />
    <string name="ketik_disini" />
    <string name="simpan" />
    <string name="ketikdisini">ketik disini</string>
    <string name="simpan_">simpan</string>
    <string name="batal" />
    <string name="batal_">Batal</string>
    <string name="hapus">hapus</string>
    <string name="update">update</string>
</resources>